@@ -54,7 +54,7 @@ public class JavaALSSuite extends SharedSparkSession {
         double prediction = r.rating();
         double correct = trueRatings[r.product() * users + r.user()];
         Assertions.assertTrue(Math.abs(prediction - correct) < matchThreshold,
-          String.format("Prediction=%2.4f not below match threshold of %2.2f",
+          "Prediction=%2.4f not below match threshold of %2.2f".formatted(
             prediction, matchThreshold));
       }
     } else {
@@ -73,7 +73,7 @@ public class JavaALSSuite extends SharedSparkSession {
       }
       double rmse = Math.sqrt(sqErr / denom);
       Assertions.assertTrue(rmse < matchThreshold,
-        String.format("Confidence-weighted RMSE=%2.4f above threshold of %2.2f",
+        "Confidence-weighted RMSE=%2.4f above threshold of %2.2f".formatted(
           rmse, matchThreshold));
     }
   }
